--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -1,9 +1,10 @@
-<navbar></navbar>
-<header>
-  <hero></hero>
-</header>
+
 <main>
-  <div>
-    <h1>Found in {{ $ctrl.name }}.html</h1>
+  <div class="content text--center soft--top">
+    <h1>RecChanges Trainer Portal</h1>
+    <div class="">
+      <loginbox></loginbox>
+    </div>
   </div>
+
 </main>
